--- a/instances/cluster/Vagrantfile
+++ b/instances/cluster/Vagrantfile
@@ -101,6 +101,7 @@ Vagrant::Config.run do |config|
     web_config.vm.network :hostonly, "10.10.10.10"
     web_config.vm.forward_port 22, 2210
     web_config.vm.forward_port 80, 8010
+    web_config.vm.box = "web"
     web_config.vm.provision :chef_solo do |chef|
     	chef.cookbooks_path = "../../chef/cookbooks"
     	chef.roles_path     = "../../chef/roles"
@@ -116,6 +117,14 @@ Vagrant::Config.run do |config|
     	chef.cookbooks_path = "../../chef/cookbooks"
     	chef.roles_path     = "../../chef/roles"
     	chef.add_role "db"
+	
+	chef.json = {
+	    :mysql => {
+		:server_root_password => "xface777ab81",
+		:bind_address => "10.10.10.11"
+	    }
+	}
     end
   end
+
 end
