--- a/instances/cluster/Vagrantfile
+++ b/instances/cluster/Vagrantfile
@@ -127,9 +127,9 @@ Vagrant::Config.run do |config|
     	chef.roles_path     = "../../chef/roles"
     	chef.add_role "db"
 	    chef.json = {
-	        :mysql => {
-		        :server_root_password => "xface777ab81",
-		        :bind_address => "10.10.10.11"
+	        "mysql" => {
+		        "server_root_password" => "xface777ab81",
+		        "bind_address" => "10.10.10.11"
 	        }
 	    }
     end
