is it even possible to blog on the commit message\? i'm trying that now, let see how long it will goes....\n there's once upon a time when people is still doing something good, and then ....

--- a/instances/cluster/Vagrantfile
+++ b/instances/cluster/Vagrantfile
@@ -146,6 +146,8 @@ Vagrant::Config.run do |config|
       chef.cookbooks_path = "../../chef/cookbooks/"
       chef.roles_path     = "../../chef/roles"
       chef.add_role "mon"
+      # at this point, no recipes will included.
+      # all broken, and sometimes tired to see the config file.
     end
     
     
