--- a/chef/cookbooks/apache2/Gemfile
+++ b/chef/cookbooks/apache2/Gemfile
@@ -1,10 +1,10 @@
 source :rubygems
 
-gem 'cucumber', '~> 1.2.0'
+gem 'cucumber', '~> 1.1.8'
 gem 'httparty', '~> 0.8.3'
 gem 'minitest', '~> 3.0.0'
 gem 'nokogiri', '~> 1.5.0'
 
 group :kitchen  do
-  gem 'test-kitchen', '<= 1.0'
+  gem 'test-kitchen'
 end
